--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     <title>{% block title %} {% endblock %}</title>
 
     <style>
-    .carousel {
+    .carousel, .quiz {
         margin-left: auto;
         margin-right: auto;
         max-width: 800px; /* Adjust the maximum width as needed */
