--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -2,19 +2,20 @@
 {% block title %} Quiz {% endblock %}
 {% block main %}
 
-<div class="container">
+<div class="container quiz">
     <div class="row justify-content-center">
-        <br>
-        <br>
-        <h1>Quiz</h1>
-        <form action="/submit_quiz" method="post">
+        <div>
+            <h1>Quiz</h1>
+        </div>
+        
+        <form action="{{ url_for('home.submit_quiz') }}" method="post">
             {% for question in questions %}
                 <div>
                     <p class="lead">{{ loop.index }}. {{ question['question']|safe }}</p>
                     {% if question['type'] == 'multiple' %}
-                        <input type="radio" name="question{{ loop.index }}" value="{{ question['correct_answer'] }}"> {{ question['correct_answer'] }}<br>
+                            <input type="checkbox" name="question{{ loop.index }}" value="{{ question['correct_answer'] }}"> {{ question['correct_answer'] }}<br>
                         {% for answer in question['incorrect_answers'] %}
-                            <input type="radio" name="question{{ loop.index }}" value="{{ answer }}"> {{ answer }}<br>
+                            <input type="checkbox" name="question{{ loop.index }}" value="True"> {{ answer }}<br>
                         {% endfor %}
                     {% elif question['type'] == 'boolean' %}
                         <input type="radio" name="question{{ loop.index }}" value="True"> True<br>
@@ -23,7 +24,7 @@
                     <br>
                 </div>
             {% endfor %}
-            <input type="submit" value="Submit Quiz">
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
