--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Poppy {% endblock %}
+{% block title %} Quizmania {% endblock %}
 {% block main %}
 
 <div id="category" class="carousel slide">
