--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,40 +25,25 @@
   <Section>
     <nav class="navbar bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand justify-content-end" href="/">Pollify</a>
+        <a class="nav-link" href="/">
+          <img src="{{ url_for('static', filename='/images/quizmania-logo.png') }}" style="height: aut; width: 6em;" alt="quizmani log">
+        </a>
 
-        <ul class="nav justify-content-end">
+        <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Leaderboard</a>
+            <a class="nav-link" href="#">Top scores</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">History</a>
           </li>
         </ul>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Pollify</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Settings</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.logout') }}">logout</a>
+          </li>
+        </ul>
+
       </div>
     </nav>
   </Section>
