--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,16 @@
   <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
     {% block main %} {% endblock %}
   </div>
+  
+  <!-- Footer sections -->
+  <footer class="bg-body-tertiary text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2024 Copyright:
+    <a class="text-body" href="https://quizmania.omarosman.tech/">quizmania</a>
+  </div>
+  <!-- Copyright -->
+</footer>
   <!-- jQuery and Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
