--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -20,6 +20,14 @@
     <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
         {% block main %} {% endblock %}
     </div>
+      <!-- Footer sections -->
+  <footer class="position-relative">
+  <!-- Copyright -->
+  <div class="position-absolute bottom-0 end-0">
+          <p style="font-size: 12px; padding: 12px">© 2024 Copyright Quizmania, Alrights reserved.</p>
+  </div>
+  <!-- Copyright -->
+</footer>
     <!-- jQuery and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
