--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,11 +53,10 @@
   </div>
   
   <!-- Footer sections -->
-  <footer class="bg-body-tertiary text-center text-lg-start">
+  <footer class="position-relative">
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2024 Copyright:
-    <a class="text-body" href="https://quizmania.omarosman.tech/">quizmania</a>
+  <div class="position-absolute bottom-0 end-0">
+	  <p style="font-size: 12px; padding: 12px">© 2024 Copyright Quizmania, Alrights reserved.</p>
   </div>
   <!-- Copyright -->
 </footer>
