Implement leader board and history

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,10 +31,10 @@
 
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Top scores</a>
+		  <a class="nav-link" href="{{ url_for('home.leader_board') }}">Top scores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">History</a>
+		  <a class="nav-link" href="{{ url_for('home.history') }}">History</a>
           </li>
         </ul>
 
