--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
 
         <ul class="nav">
           <li class="nav-item">
-		  <a class="nav-link" href="{{ url_for('home.leader_board') }}">Top scores</a>
+		  <a class="nav-link" href="{{ url_for('home.leader_board') }}">Leader baord</a>
           </li>
           <li class="nav-item">
 		  <a class="nav-link" href="{{ url_for('home.history') }}">History</a>
