--- a/app/templates/leader_board.html
+++ b/app/templates/leader_board.html
@@ -2,7 +2,7 @@
 {% block title %} Leader board {% endblock %}
 {% block main %}
 
-<div class="container quiz">
+<div class="container" style="position: absolute; top: 80px;">
     <div style="position: relative; top: 20px">
 
  <table class="table">
